--- a/openapi/components/examples/client/get/output_example.yaml
+++ b/openapi/components/examples/client/get/output_example.yaml
@@ -1,1 +1,48 @@
+ClientsGetOutputExample:
+  summary: Example response with a list of clients
+  value:
+    clients:
+      - id: 'abc123'
+        name: 'John Doe'
+        company_name: 'ACME Corp'
+        first_name: 'John'
+        last_name: 'Doe'
+        email: 'john.doe@example.com'
+        address: '123 Main Street, Anytown, CA 12345'
+        note: 'VIP Client'
+        site_ids: ['site1', 'site2']
+        created_at: '2023-05-20T08:30:00.000Z'
+        updated_at: '2023-06-20T09:45:00.000Z'
+      - id: 'def456'
+        name: 'Jane Smith'
+        company_name: 'XYZ Inc'
+        first_name: 'Jane'
+        last_name: 'Smith'
+        email: 'jane.smith@example.com'
+        address: '456 Elm Street, Othertown, NY 54321'
+        note: 'New client'
+        site_ids: ['site3']
+        created_at: '2023-06-15T10:00:00.000Z'
+        updated_at: '2023-06-15T10:00:00.000Z'
+    meta:
+      page: 1
+      perPage: 25
+      totalPages: 4
+      totalItems: 98
+      filters:
+        name:contains: 'doe'
+        created_at:gt: '2023-01-01T00:00:00.000Z'
+      sort: created_at,desc
 
+ClientsGetEmptyOutputExample:
+  summary: Example response with an empty list of clients
+  value:
+    clients: []
+    meta:
+      page: 1
+      perPage: 25
+      totalPages: 0
+      totalItems: 0
+      filters:
+        company_name:eq: 'NonexistentCompany'
+      sort: name,asc
