--- a/openapi/components/examples/report/index/output_example.yaml
+++ b/openapi/components/examples/report/index/output_example.yaml
@@ -1,45 +1,49 @@
-NotesGetOutputExample:
-  summary: Example response with a list of notes
+ReportsIndexOutputExample:
+  summary: Example response with a list of reports
   value:
-    notes:
-      - id: note1
-        content: 'Update site weekly'
-        author: 'user@example.com'
-        created_at: '2024-01-01T10:00:00Z'
-        updated_at: '2024-01-01T10:00:00Z'
-        has_versions: false
-      - id: note2
-        content: 'Check plugin compatibility'
-        author: 'admin@example.com'
-        created_at: '2024-01-02T14:30:00Z'
-        updated_at: '2024-01-03T09:15:00Z'
-        has_versions: true
-      - id: note3
-        content: 'Optimize database queries'
-        author: 'developer@example.com'
-        created_at: '2024-01-05T11:45:00Z'
-        updated_at: '2024-01-05T11:45:00Z'
-        has_versions: false
+    reports:
+      - id: MEYTaTaFBUR3h8Tie6QzQtki
+        start_date: '2024-01-01'
+        end_date: '2024-01-31'
+        site_id: '16b4c3f2'
+        category: SCHEDULED
+        created_at: '2024-02-01T00:00:00Z'
+        client:
+          name: John Doe
+          email: john.doe@example.com
+        recipients:
+          user@example.com:
+            noreply@example.com:
+              - delivered_at: '2024-02-01T00:05:00Z'
+                sent_at: '2024-02-01T00:00:05Z'
+                opened_at: '2024-02-01T09:30:00Z'
+                status: OPENED
+                sender: noreply@example.com
+        status: COMPLETED
+      - id: NEZUbTbGCVS4i9Ujf7RARulj
+        start_date: '2024-02-01'
+        end_date: '2024-02-29'
+        site_id: '27d5e4g3'
+        category: ONE_TIME
+        created_at: '2024-03-01T00:00:00Z'
+        client:
+          name: Jane Smith
+          email: jane.smith@example.com
+        recipients:
+          admin@example.com:
+            support@example.com:
+              - delivered_at: '2024-03-01T00:10:00Z'
+                sent_at: '2024-03-01T00:00:10Z'
+                opened_at: null
+                status: DELIVERED
+                sender: support@example.com
+        status: COMPLETED
     meta:
       page: 1
-      perPage: 10
-      totalPages: 3
-      totalItems: 27
+      perPage: 20
+      totalPages: 5
+      totalItems: 100
       filters:
-        content:contains: 'update'
-        created_at:gt: '2023-12-31'
-      sort: updated_at,desc
-
-NotesGetEmptyOutputExample:
-  summary: Example response with an empty list of notes
-  value:
-    notes: []
-    meta:
-      page: 1
-      perPage: 10
-      totalPages: 0
-      totalItems: 0
-      filters:
-        author:eq: 'nonexistent@example.com'
-        created_at:lt: '2023-01-01'
-      sort: created_at,asc
+        category:eq: SCHEDULED
+        created_at:gte: '2024-01-01T00:00:00Z'
+      sort: created_at,desc
